--- a/views/pages/userCenter.jade
+++ b/views/pages/userCenter.jade
@@ -39,5 +39,8 @@ block content
 							button.btn.btn-default(style="position:relative") 头像上传
 								input#uploadPic(type="file",name="uploadPic",style="position: absolute;left: 0;top: 0;z-index: 1;width: 100%;opacity: 0;cursor: pointer;height:100%")
 					.form-group
-						.col-sm-offset-2.col-sm-10
+						.col-sm-offset-2.col-sm-2
 							button.btn.btn-primary(type="submit") 录入
+						.col-sm-offset-11
+							a(href="/")
+								button.btn.btn-primary(type="button") 返回首页
