--- a/views/pages/worksiteList.jade
+++ b/views/pages/worksiteList.jade
@@ -7,7 +7,7 @@ block content
 					thead
 						tr
 							th(style="text-align:center;width:60px;") 序号
-							th 工作地点(上海行政区)
+							th 工作地点
 							th(style="text-align:center;") 合计
 							th(style="text-align:center;") 录入时间
 							th(style="text-align:center;") 查看
