--- a/views/pages/categoryAdd.jade
+++ b/views/pages/categoryAdd.jade
@@ -11,5 +11,8 @@ block content
 						.col-sm-10
 							input#inputCategory.form-control(type="text",name="category[name]",value=category.name)
 					.form-group
-						.col-sm-offset-2.col-sm-10
-							button.btn.btn-primary(type="submit") 保存
+						.col-sm-offset-2.col-sm-2
+							button.btn.btn-success(type="submit") 保存
+						.col-sm-offset-11
+							a(href="/")
+								button.btn.btn-primary(type="button") 返回首页
