--- a/views/pages/worksiteAdd.jade
+++ b/views/pages/worksiteAdd.jade
@@ -17,5 +17,8 @@ block content
 										input(type="radio", value="#{item}", name="worksite[addr]")
 									| #{item}
 					.form-group
-						.col-sm-offset-2.col-sm-10
+						.col-sm-offset-2.col-sm-2
 							button.btn.btn-primary(type="submit") 保存
+						.col-sm-offset-11
+							a(href="/")
+								button.btn.btn-primary(type="button") 返回首页
