--- a/views/includes/header.jade
+++ b/views/includes/header.jade
@@ -15,11 +15,11 @@
 							a(href="?type=worksite") 按工作地点
 		if title=="首页"
 			.col-md-4
-				form#form-search(action="/weintern/search",method="post",onSubmit="return false")
+				form#form-search(action="/weintern/search",method="get")
 					.input-group(style="padding-top:10px")
-						input.form-control(type="text",onkeydown="onKeyDown(this)",name="query",placeholder="输入关键字搜索")
-						span.input-group-addon
-							i.glyphicon.glyphicon-search
+						input.form-control(type="text",name="query",placeholder="输入关键字搜索")
+						span.input-group-btn
+							button.btn.btn-success(type="submit") 点击搜索
 		.col-md-4.pull-right
 			if user
 				h5.text-right(style="display:flex;align-items:center")
@@ -84,18 +84,3 @@
 				.modal-footer
 					button.btn.btn-default(type="button",data-dismiss="modal") 取消
 					button.btn.btn-success(type="submit") 提交
-	script.
-		function onKeyDown(ele){
-			var e = event || window.event  
-			var $val = $(ele).val();			
-			if(e && e.keyCode==13){ // enter 键
-				console.info($val)
-				if($val==""||$val==null){
-					return false
-				}else{
-					console.log($val);
-					$("#form-search").attr('onSubmit','return true');
-				}
-				return false
-			}
-		}
