--- a/views/pages/search.jade
+++ b/views/pages/search.jade
@@ -19,7 +19,16 @@ block content
 											a(href="/weintern/job/detail/" + item._id)
 												img(src="/uploads/#{item.image}", alt="#{item.company}", style="height:350px;")
 											.caption
-												h5 #{item.jobname}
+												span.weintern-font-larger.weintern-black-deeper #{item.company}
+												span.weintern-font-larger.weintern-black-deeper.pull-right #{item.jobname}
+												if item.salary != "不限"
+													h5.weintern-gray-normal ￥#{item.salary}元/天 | #{item.internWeek}天/周 | #{item.interMonth}个月 |
+														if item.canBeRegular
+														|  可转正
+												else
+													h5.weintern-gray-normal 薪资#{item.salary} | #{item.internWeek}天/周 | #{item.interMonth}个月 |
+														if item.canBeRegular
+														|  可转正
 												a.btn.btn-primary(href="/weintern/job/detail/#{item._id}", role="button") 查看岗位详情
 						if categories
 							.row
@@ -30,29 +39,42 @@ block content
 												a(href="/weintern/job/detail/#{item._id}")
 													img(src="/uploads/#{item.image}", alt="#{item.company}", style="height:350px;")
 												.caption
-													h5 #{item.jobname}
+													span.weintern-font-larger.weintern-black-deeper #{item.company}
+													span.weintern-font-larger.weintern-black-deeper.pull-right #{item.jobname}
+													if item.salary != "不限"
+														h5.weintern-gray-normal ￥#{item.salary}元/天 | #{item.internWeek}天/周 | #{item.interMonth}个月 |
+															if item.canBeRegular
+															|  可转正
+													else
+														h5.weintern-gray-normal 薪资#{item.salary} | #{item.internWeek}天/周 | #{item.interMonth}个月 |
+															if item.canBeRegular
+															|  可转正
 													a.btn.btn-primary(href="/weintern/job/detail/#{item._id}", role="button") 查看岗位详情
-								//- if number > 8
-								//-         nav(style="text-align: center")
-								//-             ul.pagination.pagination-lg(style="margin:10px 0")
-								//-                 if pageSize-1 <= 0
-								//-                     li.previous.disabled
-								//-                         a(href='javascript:;') «
-								//-                 else
-								//-                     li.previous
-								//-                         a(href='/search?pageSize=#{pageSize-1}') «
-								//-                 -for(var i = 0; i < page; i++){
-								//-                     -if( pageSize == (i+1)){
-								//-                         li.active
-								//-                             span #{pageSize}
-								//-                     -}else{
-								//-                         li
-								//-                             a(href='/search?pageSize=#{i+1}') #{i+1}
-								//-                     -}
-								//-                 -}
-								//-                 if pageSize+1 > page
-								//-                     li.next.disabled
-								//-                         a(href='javascript:;') »
-								//-                 else
-								//-                     li.next
-								//-                         a(href='/search?pageSize=#{pageSize+1}') »
+							.row
+								.col-sm-2.col-sm-offset-10
+									a(href="/")
+										button.btn.btn-primary(type="button") 返回首页
+							//if number > 8
+							//nav(style="text-align: center")
+							//	ul.pagination.pagination-lg(style="margin:10px 0")
+							//		if pageSize - 1 <= 0
+							//			li.previous.disabled
+							//				a(href='javascript:;') «
+							//		else
+							//			li.previous
+							//				a(href='/weintern/job/category/result?cat=#{categoryId}&pageSize=#{pageSize - 1}') «
+							//		-for(var i = 0; i < page; i++){
+							//		-if( pageSize == (i+1)){
+							//		li.active
+							//			span #{pageSize}
+							//		-}else{
+							//		li
+							//			a(href='/weintern/job/category/result?cat=#{categoryId}&pageSize=#{i + 1}') #{i + 1}
+							//		-}
+							//		-}
+							//		if pageSize + 1 > page
+							//			li.next.disabled
+							//				a(href='javascript:;') »
+							//		else
+							//			li.next
+							//				a(href='/weintern/job/category/result?cat=#{categoryId}&pageSize=#{pageSize + 1}') »
