--- a/views/pages/worksiteAdd.jade
+++ b/views/pages/worksiteAdd.jade
@@ -18,7 +18,7 @@ block content
 									| #{item}
 					.form-group
 						.col-sm-offset-2.col-sm-2
-							button.btn.btn-primary(type="submit") 保存
+							button.btn.btn-success(type="submit") 保存
 						.col-sm-offset-11
 							a(href="/")
 								button.btn.btn-primary(type="button") 返回首页
