增加根据公司名称进行搜索

--- a/views/includes/header.jade
+++ b/views/includes/header.jade
@@ -17,7 +17,7 @@
 			.col-md-4
 				form#form-search(action="/weintern/search",method="get")
 					.input-group(style="padding-top:10px")
-						input.form-control(type="text",name="query",placeholder="输入关键字搜索")
+						input.form-control(type="text",name="query",placeholder="输入实习名称、地名、公司名称关键字搜索")
 						span.input-group-btn
 							button.btn.btn-success(type="submit") 点击搜索
 		.col-md-4.pull-right
