--- a/views/pages/index.jade
+++ b/views/pages/index.jade
@@ -19,8 +19,8 @@ block content
 													a(href="/weintern/job/detail/" + item._id)
 														img(src="/uploads/#{item.image}", alt="#{item.company}", style="height:350px;")
 													.caption
-														span.weintern-font-larger.weintern-black-deeper #{item.company}
-														span.weintern-font-larger.weintern-black-deeper.pull-right #{item.jobname}
+														span.weintern-font-larger.weintern-black-deeper(style="display:inline-block;width:50%;white-space: nowrap;text-overflow: ellipsis;overflow: hidden;") #{item.company}
+														span.weintern-font-larger.weintern-black-deeper.pull-right(style="display:inline-block;width:50%;white-space: nowrap;text-overflow: ellipsis;overflow: hidden;") #{item.jobname}
 														if item.salary != "不限"
 															h5.weintern-gray-normal ￥#{item.salary}元/天 | #{item.internWeek}天/周 | #{item.interMonth}个月 |
 																if item.canBeRegular
